--- a/detector-model/pom.xml
+++ b/detector-model/pom.xml
@@ -27,7 +27,7 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>org.lcsim.geometry.compact.converter.Main</mainClass>
+                  <mainClass>org.hps.detector.DetectorConverter</mainClass>
                 </transformer>
               </transformers>
               <artifactSet>
