--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>org.hps</groupId>
       <artifactId>hps-test-data</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
       <scope>test</scope>
       <classifier>archive</classifier>
       <type>jar</type>
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>org.hps</groupId>
       <artifactId>hps-test-data</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
       <scope>test</scope>
       <type>jar</type>
     </dependency>
