--- a/pom.xml
+++ b/pom.xml
@@ -331,7 +331,7 @@
       <dependency>
         <groupId>jfreechart-aida-experimental</groupId>
         <artifactId>jfreechart-aida-experimental</artifactId>
-        <version>1.9-SNAPSHOT</version>
+        <version>1.9.0</version>
         <exclusions>
           <exclusion>
             <groupId>jdom</groupId>
