--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -23,7 +23,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <excludes>
-            <exclude>**/*Test.java</exclude>
+            <exclude>**/TupleDriverTest.java</exclude>
           </excludes>
         </configuration>
       </plugin>
