--- a/conditions/pom.xml
+++ b/conditions/pom.xml
@@ -46,7 +46,8 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
-      <version>3.23.1</version>
+      <version>3.25.2</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.reflections</groupId>
