--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,34 @@
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Package Files #
+*.jar
+*.zip
+*.tar.gz
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# IDE project dirs
 .classpath
 .project
 .settings
+nbproject
+
+# Maven target dir
 target
+
+# Diff output
 *.diff
-*.log
-/analysis/nbproject/
+
+# Physics file formats
+*.aida
+*.root
+*.slcio
+*.stdhep
