Iss434: Add EVIO Data Converter for Hodoscope (#467)
* Change physvolid on sens vol.

* Changes to detector IDs in compact and LCDD.

* A very first commit for the hodoscope, it essentially doesn't contain any physics analysis yet

* removed hodo-recon part, which actually should not be in this branch

* An empty frame for the HodoHitWriter: Work in progress

* Frame of HodoEvioReader, Work in progress

* Work in progress in the EVIO->LCIO conversion for the Hodo part

* Still work in progress, this is before conditions system will be merged to this branch

* Add Hodoscope detector classes.

* Add test detector for Hodoscope.

* Work in progress to make evio2lcio to work for hodo. Still has problems a lot of printouts

* Copy minor detector changes from iss420.

* The 1st working version of evio2LCIO, though it needs some more polishing

* Added methods for reading Mode3 and Mode7 data, though this need to be tested with a data, which probably can be taken within next few days

* Removed an unnecesary commented line

* some constants are added in the constats file, they have more generic names, rather than detector specific, Will be good if later ECal code also will use more generic name for FADC data mode. Also I though I have already uncommented, but now I uncommented parts, where it performs moder3 and mode7 conversion to lcio

* Initial commit of hodoscope data test.

* Fix missing ID field.

* Add missing setting for barrel field.

* add driver to test hit matching from ID to geometry and use remote test file

* Fixed hard codes crate and slot numbers, now they are actual crate and slots that will be used for the production

* the ihole value is assigned to 0, and now it doesn't give error. I still need to understand why the value of ihole should be 0

* A printout is removed

* Again before a pull request, hardcoded values changed fpr production crat/slot/chabbel

* commit before merging master into this branch


--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,11 @@
       </dependency>
       <dependency>
         <groupId>org.hps</groupId>
+        <artifactId>hps-hodo-recon</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hps</groupId>
         <artifactId>hps-ecal-readout-sim</artifactId>
         <version>${project.version}</version>
       </dependency>
