--- a/online-recon/pom.xml
+++ b/online-recon/pom.xml
@@ -33,5 +33,10 @@
       <groupId>org.hps</groupId>
       <artifactId>hps-evio</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20180813</version>
+    </dependency>    
   </dependencies>
 </project>
