--- a/online-recon/pom.xml
+++ b/online-recon/pom.xml
@@ -9,21 +9,6 @@
     <relativePath>../pom.xml</relativePath>
     <version>4.4-SNAPSHOT</version>
   </parent>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-<!--
-        <configuration>
-          <excludes>
-            <exclude>**/*Test.java</exclude>
-          </excludes>
-        </configuration>
--->
-      </plugin>
-    </plugins>
-  </build>
   <dependencies>
     <dependency>
       <groupId>org.hps</groupId>
@@ -37,6 +22,12 @@
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20180813</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
     </dependency>    
   </dependencies>
 </project>
