Update to station logging properties. Do not print name of logger in messages.

--- a/online-recon/src/main/resources/org/hps/online/recon/station_logging.properties
+++ b/online-recon/src/main/resources/org/hps/online/recon/station_logging.properties
@@ -16,13 +16,9 @@
 # default handler which prints to console
 handlers = java.util.logging.ConsoleHandler
 
-# Detailed format
-# prints timestamp (1$), level (4$), source ($2), message (5$), and (optionally) an exception (6$).
-#java.util.logging.SimpleFormatter.format = %1$tY-%1$tm-%1$td %1$tT [%4$s] %2$s :: %5$s%6$s%n
-
-# New simplified format
-# [LEVEL][LOGGER] MESSAGE
-java.util.logging.SimpleFormatter.format = [%4$s] [%3$s] %5$s%6$s%n
+# Output format (logger name is not included)
+# [LEVEL] MESSAGE
+java.util.logging.SimpleFormatter.format = [%4$s] %5$s%6$s%n
 
 # configure the console handler
 java.util.logging.ConsoleHandler.level = ALL
@@ -41,6 +37,7 @@ org.hps.online.recon.EventStatisticsDriver.level = ALL
 
 # composite loop 
 org.hps.record.composite.level = CONFIG
+org.hps.record.composite.CompositeEventPrintLoopAdapter.level = ALL
 
 # event printing
 org.lcsim.job.EventMarkerDriver.level = ALL
