Simplify the test logging properties and turn on logging for recon packages.

--- a/logging/src/main/resources/org/hps/logging/config/test_logging.properties
+++ b/logging/src/main/resources/org/hps/logging/config/test_logging.properties
@@ -1,8 +1,20 @@
 #
-# Global logging configuration for HPS Java packages.
+# Global logging configuration for HPS Java tests
 #
-# Jeremy McCormick, SLAC
+# This is assigned to tests automatically via the top-level POM file.
 #
+# @author Jeremy McCormick, SLAC
+#
+
+# Available log levels
+# SEVERE (highest value)
+# WARNING
+# INFO
+# CONFIG
+# FINE
+# FINER
+# FINEST (lowest value)
+# ALL (always prints)
 
 # default global level
 .level = WARNING
@@ -15,80 +27,33 @@ handlers = java.util.logging.ConsoleHandler
 #java.util.logging.SimpleFormatter.format = %1$tY-%1$tm-%1$td %1$tT [%4$s] %2$s :: %5$s%6$s%n
 
 # New simplified format
-# [LEVEL][LOGGER] MESSAGE
+# [LEVEL] [LOGGER] MESSAGE
 java.util.logging.SimpleFormatter.format = [%4$s] [%3$s] %5$s%6$s%n
 
 # configure the console handler
 java.util.logging.ConsoleHandler.level = ALL
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
+#
+# Only override loggers with settings that are different from the default of 'WARNING'.
+# Any custom settings needed for debugging particular tests should be changed or added here.
+#
+
 # turn minuit off
 org.freehep.math.minuit.level = OFF
 
-# lcsim job
-org.lcsim.job.level = CONFIG
-org.lcsim.job.EventMarkerDriver.level = OFF
+# event printing
 org.lcsim.job.EventPrintLoopAdapter = ALL
 
 # conditions
-org.hps.conditions.api.level = WARNING
 org.hps.conditions.database.level = INFO
-org.hps.conditions.cli.level = WARNING
-org.hps.conditions.ecal.level = WARNING
-org.hps.conditions.svt.level = WARNING
-
-# monitoring-drivers
-org.hps.monitoring.drivers.svt.level = WARNING
-org.hps.monitoring.plotting.level = WARNING
-
-# evio
-org.hps.evio.level = WARNING
-
-# analysis
-org.hps.analysis.trigger.level = WARNING
-org.hps.analysis.dataquality.level = WARNING
-
-# crawler
-org.hps.crawler.level = WARNING
-
-# datacat
-org.hps.datacat.level = WARNING
-
-# ecal-recon
-org.hps.recon.ecal.level = WARNING
-org.hps.recon.ecal.cluster.level = WARNING
 
 # recon
-org.hps.recon.filtering.level = WARNING
-
-# record-util
-org.hps.record.epics.level = WARNING
-org.hps.record.evio.level = WARNING
-org.hps.record.scalers.level = WARNING
-org.hps.record.triggerbank.level = WARNING
-org.hps.record.svt.level = WARNING
-
-# tracking
-org.hps.recon.tracking.level = WARNING
-org.hps.recon.tracking.gbl.level = WARNING
-
-# run-database
-org.hps.rundb.level = WARNING
-
-# monitoring-application
-org.hps.monitoring.application.model.level = WARNING
-org.hps.monitoring.application.level = WARNING
-
-# detector-model
-org.lcsim.detector.converter.compact.level = WARNING
-org.lcsim.geometry.compact.converter.level = WARNING
-org.hps.detector.svt.level = WARNING
+org.hps.recon.particle.level = CONFIG
+org.hps.recon.vertexing.level = CONFIG
 
 # test data
 org.hps.data.test.level = INFO
-
-# HPS job manager
-org.hps.job.JobManager.level = WARNING
 
 # test util
 org.hps.test.util.level = ALL
