Restore setting needed for event number printing.

--- a/logging/src/main/resources/org/hps/logging/config/test_logging.properties
+++ b/logging/src/main/resources/org/hps/logging/config/test_logging.properties
@@ -42,7 +42,8 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 # turn minuit off
 org.freehep.math.minuit.level = OFF
 
-# event printing
+# lcsim job manager
+org.lcsim.job.level = CONFIG
 org.lcsim.job.EventPrintLoopAdapter = ALL
 
 # conditions
