Set log level for class logger which prints header errors when they occur.

--- a/logging/src/main/resources/org/hps/logging/config/logging.properties
+++ b/logging/src/main/resources/org/hps/logging/config/logging.properties
@@ -43,6 +43,8 @@ org.hps.monitoring.plotting.level = INFO
 
 # evio
 org.hps.evio.level = CONFIG
+# This will print header errors if they occur but not the details.
+org.hps.evio.AugmentedSvtEvioReader.level = WARNING
 
 # analysis
 org.hps.analysis.trigger.level = INFO
