--- a/logging/src/main/resources/org/hps/logging/config/test_logging.properties
+++ b/logging/src/main/resources/org/hps/logging/config/test_logging.properties
@@ -43,6 +43,7 @@ org.hps.monitoring.plotting.level = WARNING
 
 # evio
 org.hps.evio.level = WARNING
+org.hps.evio.AugmentedSvtEvioReader.level = WARNING
 
 # analysis
 org.hps.analysis.trigger.level = WARNING
