--- a/detector-data/pom.xml
+++ b/detector-data/pom.xml
@@ -8,7 +8,7 @@
     <groupId>org.hps</groupId>
     <artifactId>hps-java</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>4.4-2019-SNAPSHOT</version>
+    <version>4.5-SNAPSHOT</version>
   </parent>
   <build>
     <resources>
