--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -29,11 +29,11 @@
           <urls>
             <property>
               <name>org.hps:*</name>
-              <value>http://srs.slac.stanford.edu/nexus/content/groups/lcsim-maven2-public/</value>
+              <value>https://srs.slac.stanford.edu/nexus/content/groups/lcsim-maven2-public/</value>
             </property>
             <property>
               <name>org.lcsim:*</name>
-              <value>http://srs.slac.stanford.edu/nexus/content/groups/lcsim-maven2-public/</value>
+              <value>https://srs.slac.stanford.edu/nexus/content/groups/lcsim-maven2-public/</value>
             </property>
             <property>
               <name>org.jlab.coda:*</name>
@@ -46,8 +46,8 @@
           </urls>
           <redirectUrls>
             <property>
-              <name>http://srs.slac.stanford.edu/nexus/content/groups/lcsim-maven2-public/</name>
-              <value>http://srs.slac.stanford.edu/nexus/service/local/artifact/maven/redirect?r=lcsim-maven2-public</value>
+              <name>https://srs.slac.stanford.edu/nexus/content/groups/lcsim-maven2-public/</name>
+              <value>https://srs.slac.stanford.edu/nexus/service/local/artifact/maven/redirect?r=lcsim-maven2-public</value>
             </property>
           </redirectUrls>
         </configuration>
