--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
       <name>Freehep Plugin Repository</name>
       <url>https://srs.slac.stanford.edu/nexus/content/groups/freehep-maven2-public/</url>
     </pluginRepository>
+    <pluginRepository>
+      <id>maven-central-repo</id>
+      <name>Maven repository</name>
+      <url>https://repo1.maven.org/maven2/</url>
+    </pluginRepository>
   </pluginRepositories>
   
   <modules>
