--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -40,7 +40,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <skipTests>false</skipTests> <!-- cng -->
+          <skipTests>true</skipTests> <!-- cng -->
         </configuration>
       </plugin>
       <plugin>
