--- a/logging/src/main/resources/org/hps/logging/config/test_logging.properties
+++ b/logging/src/main/resources/org/hps/logging/config/test_logging.properties
@@ -28,7 +28,9 @@ handlers = java.util.logging.ConsoleHandler
 
 # New simplified format
 # [LEVEL] [LOGGER] MESSAGE
-java.util.logging.SimpleFormatter.format = [%4$s] [%3$s] %5$s%6$s%n
+#java.util.logging.SimpleFormatter.format = [%4$s] [%3$s] %5$s%6$s%n
+
+java.util.logging.SimpleFormatter.format = %3$s:%4$s %5$s%6$s%n
 
 # configure the console handler
 java.util.logging.ConsoleHandler.level = ALL
