--- a/tracking/pom.xml
+++ b/tracking/pom.xml
@@ -46,9 +46,15 @@
             <artifactId>commons-math3</artifactId>
         </dependency>
         <dependency>
-            <groupId>net.java.dev.jna</groupId>
+          <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
             <version>5.5.0</version>
         </dependency>
+        <dependency>
+          <groupId>jeigen</groupId>
+          <artifactId>Jeigen-onefat</artifactId>
+          <version>1.1</version>
+        </dependency>
+
     </dependencies>
 </project>
