--- a/tracking/pom.xml
+++ b/tracking/pom.xml
@@ -33,28 +33,32 @@
         </plugins>
     </build>
     <dependencies>
-        <dependency>
-            <groupId>org.hps</groupId>
-            <artifactId>hps-detector-model</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.hps</groupId>
-            <artifactId>hps-ecal-readout-sim</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-math3</artifactId>
-        </dependency>
-        <dependency>
-          <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna</artifactId>
-            <version>5.5.0</version>
-        </dependency>
-        <dependency>
-          <groupId>jeigen</groupId>
-          <artifactId>Jeigen-onefat</artifactId>
-          <version>1.1</version>
-        </dependency>
-
+      <dependency>
+        <groupId>org.hps</groupId>
+        <artifactId>hps-detector-model</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.hps</groupId>
+        <artifactId>hps-ecal-readout-sim</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-math3</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>net.java.dev.jna</groupId>
+        <artifactId>jna</artifactId>
+        <version>5.5.0</version>
+      </dependency>
+      <dependency>
+        <groupId>jeigen</groupId>
+        <artifactId>Jeigen-onefat</artifactId>
+        <version>1.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.ejml</groupId>
+        <artifactId>ejml-all</artifactId>
+        <version>0.39</version>
+      </dependency>
     </dependencies>
 </project>
