--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -173,5 +173,9 @@
       <groupId>org.hps</groupId>
       <artifactId>hps-online-recon</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.hps</groupId>
+      <artifactId>hps-digi</artifactId>
+    </dependency>
   </dependencies>
 </project>
