--- a/digi/pom.xml
+++ b/digi/pom.xml
@@ -10,13 +10,19 @@
     <relativePath>../pom.xml</relativePath>
     <version>4.5-SNAPSHOT</version>
   </parent>
-  <!--
+  
   <dependencies>
+    <dependency>
+      <groupId>org.hps</groupId>
+      <artifactId>hps-record-util</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.hps</groupId>
       <artifactId>hps-recon</artifactId>
     </dependency>
   </dependencies>
+  
+  <!--
   <build>
     <plugins>
       <plugin>
