removed some tests in analysis module

--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -24,6 +24,8 @@
         <configuration>
           <excludes>
             <exclude>**/TupleDriverTest.java</exclude>
+            <exclude>**/MollerTupleDriverTest.java</exclude>
+            <exclude>**/TridentTupleDriverTest.java</exclude>
             <exclude>**/MC/TrackExtrapTest.java</exclude>
           </excludes>
         </configuration>
