--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,5 +1,6 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
+# Author: PF
 
 name: Java CI with Maven
 
@@ -20,5 +21,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build with Maven skipping tests
+    - name: Build hps-java (skipping tests)
       run: mvn -T 4 clean install -DskipTests=true
+    - name: Run hps-java tests
+      run: mvn test
