--- a/tracking/pom.xml
+++ b/tracking/pom.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>hps-tracking</artifactId>
-  <name>tracking</name>
-  <description>tracking reconstruction algorithms</description>
-  <parent>
-    <groupId>org.hps</groupId>
-    <artifactId>hps-java</artifactId>
-    <relativePath>../pom.xml</relativePath>
-    <version>4.5-SNAPSHOT</version>
-  </parent>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>hps-tracking</artifactId>
+    <name>tracking</name>
+    <description>tracking reconstruction algorithms</description>
+    <parent>
+      <groupId>org.hps</groupId>
+      <artifactId>hps-java</artifactId>
+      <relativePath>../pom.xml</relativePath>
+      <version>4.5-SNAPSHOT</version>
+    </parent>
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
           <excludes>
             <exclude>**/ReconTestSkeleton.java</exclude>
             <exclude>**/RecoToRaw.java</exclude>
@@ -31,19 +31,29 @@
         </configuration>
       </plugin>
     </plugins>
-  </build>
-  <dependencies>
-    <dependency>
-      <groupId>org.hps</groupId>
-      <artifactId>hps-detector-model</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.hps</groupId>
-      <artifactId>hps-ecal-readout-sim</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-math3</artifactId>
-    </dependency>
-  </dependencies>
+    </build>
+    <dependencies>
+      <dependency>
+        <groupId>org.hps</groupId>
+        <artifactId>hps-detector-model</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.hps</groupId>
+        <artifactId>hps-ecal-readout-sim</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-math3</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>net.java.dev.jna</groupId>
+        <artifactId>jna</artifactId>
+        <version>5.5.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.ejml</groupId>
+        <artifactId>ejml-all</artifactId>
+        <version>0.39</version>
+      </dependency>
+    </dependencies>
 </project>
