--- a/online-recon/pom.xml
+++ b/online-recon/pom.xml
@@ -28,6 +28,11 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.6</version>
-    </dependency>    
+    </dependency>
+    <dependency>
+      <groupId>org.freehep</groupId>
+      <artifactId>freehep-jaida-remote</artifactId>
+      <version>3.4.13</version>
+    </dependency>
   </dependencies>
 </project>
