Integrate remote AIDA with online recon

--- a/online-recon/src/main/resources/org/hps/online/recon/station_logging.properties
+++ b/online-recon/src/main/resources/org/hps/online/recon/station_logging.properties
@@ -35,9 +35,12 @@ org.hps.conditions.cli.level = CONFIG
 org.hps.online.recon.level = ALL
 org.hps.online.recon.EventStatisticsDriver.level = ALL
 
-# composite loop 
+# composite loop
 org.hps.record.composite.level = CONFIG
 org.hps.record.composite.CompositeEventPrintLoopAdapter.level = ALL
 
 # event printing
 org.lcsim.job.EventMarkerDriver.level = ALL
+
+org.lcsim.job.level = ALL
+
