--- a/online-recon/pom.xml
+++ b/online-recon/pom.xml
@@ -40,6 +40,12 @@
       <artifactId>freehep-jaida-remote</artifactId>
       <version>3.4.13</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.sonatype.nexus/google-guava-eventbus -->
+    <dependency>
+      <groupId>org.sonatype.nexus</groupId>
+      <artifactId>google-guava-eventbus</artifactId>
+      <version>3.2.0-01</version>
+  </dependency>
   </dependencies>
   <build>
     <plugins>
