--- a/online-recon/src/main/resources/org/hps/online/recon/logging.properties
+++ b/online-recon/src/main/resources/org/hps/online/recon/logging.properties
@@ -1,4 +1,4 @@
-# Default logging config for EVIO producer and Station
+# Basic logging config file used for Station and EVIO file producer
 
 # default global level
 .level = WARNING
@@ -6,7 +6,7 @@
 # default handler which prints to console
 handlers = java.util.logging.ConsoleHandler
 
-# [LEVEL] MESSAGE
+# [level] message exception
 java.util.logging.SimpleFormatter.format = [%4$s] %5$s%6$s%n
 
 # configure the console handler
@@ -14,7 +14,8 @@ java.util.logging.ConsoleHandler.level = ALL
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 # online recon
-org.hps.online.recon.level = CONFIG
+org.hps.online.recon.level = ALL
+org.hps.online.recon.eventbus.level = ALL
 
 # EVIO producer
 org.hps.record.evio.EvioFileProducer.level = INFO
