Make sure host is settable on server and client with CL args and misc updates to log messsages

--- a/online-recon/src/main/resources/org/hps/online/recon/logging/client_logging.properties
+++ b/online-recon/src/main/resources/org/hps/online/recon/logging/client_logging.properties
@@ -13,4 +13,5 @@ java.util.logging.SimpleFormatter.format = [%4$s] %5$s%6$s%n
 java.util.logging.ConsoleHandler.level = ALL
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
-org.hps.online.recon.level = INFO
+# set client log level here
+org.hps.online.recon.level = ALL
