Update javadoc, add package-info, and a few misc changes to station management

--- a/online-recon/src/main/resources/org/hps/online/recon/logging/logging.properties
+++ b/online-recon/src/main/resources/org/hps/online/recon/logging/logging.properties
@@ -14,8 +14,8 @@ java.util.logging.ConsoleHandler.level = ALL
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 # online recon
-org.hps.online.recon.level = ALL
-org.hps.online.recon.eventbus.level = ALL
+org.hps.online.recon.level = CONFIG
+org.hps.online.recon.eventbus.level = CONFIG
 
 # EVIO producer
 org.hps.record.evio.EvioFileProducer.level = INFO
