--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,5 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build hps-java (skipping tests)
-      run: mvn -T 4 clean install -DskipTests=true
-    - name: Run hps-java tests
-      run: mvn test
+    - name: Build hps-java and run tests
+      run: mvn -T 4 clean install
