--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,5 +21,5 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build hps-java and run tests
-      run: mvn -T 4 clean install
+    - name: Build hps-java (do not run tests)
+      run: mvn clean install -DskipTests=true
