Exclude broken test

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -57,6 +57,7 @@
             <exclude>**/ReconSteeringTest.java</exclude>
             <exclude>**/SimpleSvtReadoutTest.java</exclude>
             <exclude>**/HodoscopeSimDataTest.java</exclude>
+            <exclude>**/HodoscopeReadoutTest.java</exclude>
           </excludes>
           <systemPropertyVariables>
             <org.lcsim.cacheDir>${org.lcsim.cacheDir}</org.lcsim.cacheDir>
