excluding some tests from pom

--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -25,6 +25,8 @@
           <excludes>
             <exclude>**/TupleDriverTest.java</exclude>
             <exclude>**/MC/TrackExtrapTest.java</exclude>
+            <exclude>**/MollerTupleDriverTest.java</exclude>
+            <exclude>**/TridentTupleDriverTest.java</exclude>
           </excludes>
         </configuration>
       </plugin>
