--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -81,6 +81,10 @@
       <groupId>org.hps</groupId>
       <artifactId>hps-evio</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.lcsim</groupId>
+      <artifactId>lcsim-event-heprep</artifactId>
+    </dependency>
   </dependencies>
   <profiles>
 <!--
