--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <skipPlugin>false</skipPlugin>
     <additionalparam>-Xdoclint:none</additionalparam>
     <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
+    <junitVersion>4.11</junitVersion>
   </properties>
 
   <scm>
@@ -140,50 +141,8 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>${junitVersion}</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.lcsim</groupId>
-      <artifactId>lcsim-event-heprep</artifactId>
-      <version>${lcsimVersion}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>jdom</groupId>
-          <artifactId>jdom</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.lcsim</groupId>
-      <artifactId>lcsim-job-manager</artifactId>
-      <version>${lcsimVersion}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-math</groupId>
-          <artifactId>commons-math</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>jdom</groupId>
-          <artifactId>jdom</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.lcsim</groupId>
-      <artifactId>lcsim-tracking</artifactId>
-      <version>${lcsimVersion}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>jdom</groupId>
-          <artifactId>jdom</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.lcsim</groupId>
-      <artifactId>lcsim-vertexing</artifactId>
-      <version>${lcsimVersion}</version>
     </dependency>
   </dependencies>
 
@@ -365,13 +324,85 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.11</version>
+        <version>${junitVersion}</version>
       </dependency>      
       <dependency>
         <groupId>org.jdom</groupId>
         <artifactId>jdom</artifactId>
         <version>1.1</version>
       </dependency>      
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>1.3</version>
+      </dependency>
+      <!-- lcsim deps below here -->
+      <dependency>
+        <groupId>org.lcsim</groupId>
+        <artifactId>lcsim-event-processing</artifactId>
+        <version>${lcsimVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.lcsim</groupId>
+        <artifactId>lcsim-aida</artifactId>
+        <version>${lcsimVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+          <groupId>org.lcsim</groupId>
+          <artifactId>lcsim-job-manager</artifactId>
+          <version>${lcsimVersion}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>jdom</groupId>
+              <artifactId>jdom</artifactId>
+            </exclusion>
+          </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.lcsim</groupId>
+        <artifactId>lcsim-tracking</artifactId>
+        <version>${lcsimVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.lcsim</groupId>
+        <artifactId>lcsim-vertexing</artifactId>
+        <version>${lcsimVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.lcsim</groupId>
+        <artifactId>lcsim-event-heprep</artifactId>
+        <version>${lcsimVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   
