--- a/recon/pom.xml
+++ b/recon/pom.xml
@@ -16,6 +16,10 @@
       <groupId>org.hps</groupId>
       <artifactId>hps-tracking</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.lcsim</groupId>
+      <artifactId>lcsim-vertexing</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
