--- a/util/pom.xml
+++ b/util/pom.xml
@@ -18,5 +18,21 @@
       <groupId>org.hps</groupId>
       <artifactId>hps-logging</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.lcsim</groupId>
+      <artifactId>lcsim-event-processing</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.lcsim</groupId>
+      <artifactId>lcsim-aida</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.lcsim</groupId>
+      <artifactId>lcsim-tracking</artifactId>
+    </dependency>
   </dependencies>
 </project>
