--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -23,10 +23,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <excludes>
-            <exclude>**/TupleDriverTest.java</exclude>
-            <exclude>**/MollerTupleDriverTest.java</exclude>
-            <exclude>**/TridentTupleDriverTest.java</exclude>
-            <exclude>**/MC/TrackExtrapTest.java</exclude>
+            <exclude>**/*Test.java</exclude>
           </excludes>
         </configuration>
       </plugin>
