--- a/pom.xml
+++ b/pom.xml
@@ -294,7 +294,7 @@
       <dependency>
         <groupId>org.reflections</groupId>
         <artifactId>reflections</artifactId>
-        <version>0.9.9-RC1</version>
+        <version>0.9.12</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
