Exclude old commons-math lib from build

--- a/pom.xml
+++ b/pom.xml
@@ -357,6 +357,10 @@
             <groupId>jdom</groupId>
             <artifactId>jdom</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>commons-math</groupId>
+            <artifactId>commons-math</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
