--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -113,18 +113,6 @@
                     <commandLineArgument>-v</commandLineArgument>
                   </commandLineArguments>
                 </program>
-                <program>
-                  <mainClass>org.hps.crawler.MetadataWriter</mainClass>
-                  <id>dc-create-metadata</id>
-                </program>
-                <program>
-                  <mainClass>org.hps.crawler.DatacatAddFile</mainClass>
-                  <id>dc-add-file</id>
-                </program>
-                <program>
-                  <mainClass>org.hps.crawler.DatacatCrawler</mainClass>
-                  <id>dc-crawler</id>
-                </program>
               </programs>
             </configuration>
           </execution>
@@ -135,7 +123,7 @@
   <dependencies>
     <dependency>
       <groupId>org.hps</groupId>
-      <artifactId>hps-monitoring-app</artifactId>
+      <artifactId>hps-online-monitoring</artifactId>
     </dependency>
     <dependency>
       <groupId>org.hps</groupId>
