--- a/online-recon/pom.xml
+++ b/online-recon/pom.xml
@@ -46,6 +46,11 @@
       <artifactId>google-guava-eventbus</artifactId>
       <version>3.2.0-01</version>
     </dependency>
+    <dependency>
+      <groupId>org.java-websocket</groupId>
+      <artifactId>Java-WebSocket</artifactId>
+      <version>1.5.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
